# docs/swagger.yaml
@@ -76,6 +76,8 @@ definitions:
     type: object
   model.User:
     properties:
+      avatar:
+        type: string
       created_at:
         type: string
       email:
@@ -118,6 +120,13 @@ definitions:
     required:
     - description
     - name
+    type: object
+  request.GoogleLogin:
+    properties:
+      token_id:
+        type: string
+    required:
+    - token_id
     type: object
   request.Login:
     properties:
@@ -280,6 +289,32 @@ paths:
                   $ref: '#/definitions/dto.Token'
               type: object
       summary: login
+      tags:
+      - auth
+  /v1/auth/google:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: google login request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.GoogleLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.success'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.Token'
+              type: object
+      summary: google login
       tags:
       - auth
   /v1/auth/refresh:
