# internal/handler/v1/srvc_interface.go
@@ -19,6 +19,7 @@ type (
 
 	AuthSrvc interface {
 		Login(ctx context.Context, email, password, ip string) (*dto.Token, error)
+		GoogleLogin(ctx context.Context, tokenID, ip string) (*dto.Token, error)
 		DecodeAToken(ctx context.Context, aToken string) (*dto.Claims, error)
 		Refresh(ctx context.Context, aToken, rToken, ip string) (*dto.Token, error)
 	}
